--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Build and deploy Jekyll site to GitHub Pages
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron:  '0 0 * * *'
 
 jobs:
   main:
