--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Build and deploy Jekyll site to GitHub Pages
 
 on:
-  schedule:
-    - cron:  '0 0 * * *'
-
+  push:
+    branches:
+      - master
+        
 jobs:
   main:
     runs-on: ubuntu-16.04
