--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+url: "https://fireflyrenderengine.github.io/fireflyengine.github.io"
+baseurl: "/home"
+
+markdown: kramdown
 theme: jekyll-theme-cayman
+plugins:
+  - jekyll-timeago
