--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ url: "https://fireflyrenderengine.github.io/fireflyengine.github.io"
 baseurl: "/home"
 
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-timeago
